# code-modal

./: .gitignore  README.md  mise.local.toml  pyproject.toml
.cursor/hooks/state/: continual-learning.json
src/code_modal/: cli.py  constants.py  execution.py  image.py  remote.py  sandbox.py  shared.py  volume.py
tests/: test_cli.py
tests/integration/: conftest.py  test_cli.py  test_write_to_sandbox.py
