[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-modal"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "modal>=1.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
code-modal = "code_modal.cli:main"
cm = "code_modal.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: exercises Modal cloud APIs (requires credentials)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
